WebCore::DOMTimerFireState constructor fails to initialize m_initialDOMTreeVersion, m_previous on worker threads <https://webkit.org/b/216085>

Reviewed by Darin Adler.

* page/DOMTimer.cpp:
(WebCore::DOMTimerFireState):
- Reorder instance variables so more logic can be moved into the
  initializer list.


Canonical link: https://commits.webkit.org/228983@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266608 268f45cc-cd09-0410-ab3c-d52691b4dbfc